// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BButton.vue render the appropritate classe based on the "variant" prop 1`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue render the appropritate classe based on the "variant" prop 2`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue render the appropritate classe based on the "variant" prop 3`] = `
<button
  class="bg-orange text-white hover:bg-orange-dark focus:ring-4 ring-orange title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue render the appropritate classe based on the "variant" prop 4`] = `
<button
  class="bg-red text-black hover:text-white hover:bg-red-light focus:ring-4 ring-red title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue render the appropritate classe based on the "variant" prop 5`] = `
<button
  class="bg-green text-white hover:bg-green-dark focus:ring-4 ring-green title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue render the appropritate classe based on the "variant" prop 6`] = `
<button
  class="bg-purple text-white hover:text-white hover:bg-purple-dark focus:ring-4 ring-purple title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 1`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 2`] = `
<button
  class="bg-white text-blue border border-blue hover:border-blue-dark hover:text-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 3`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 4`] = `
<button
  class="bg-orange text-white hover:bg-orange-dark focus:ring-4 ring-orange title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 5`] = `
<button
  class="bg-red text-black hover:text-white hover:bg-red-light focus:ring-4 ring-red title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 6`] = `
<button
  class="bg-green text-white hover:bg-green-dark focus:ring-4 ring-green title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 7`] = `
<button
  class="bg-purple text-white hover:text-white hover:bg-purple-dark focus:ring-4 ring-purple title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 8`] = `
<button
  class="bg-white text-blue border border-blue hover:border-blue-dark hover:text-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 9`] = `
<button
  class="bg-white text-orange border border-orange hover:border-orange-dark hover:text-orange-dark focus:ring-4 ring-orange title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 10`] = `
<button
  class="bg-white text-red border border-red hover:border-red-light hover:text-red-light focus:ring-4 ring-red title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 11`] = `
<button
  class="bg-white text-green border border-green hover:border-green-dark hover:text-green-dark focus:ring-4 ring-green title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "outlined" prop 12`] = `
<button
  class="bg-white text-purple border border-purple hover:border-purple-dark hover:text-purple-dark focus:ring-4 ring-purple title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "size" prop 1`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classes based on the "size" prop 2`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-4 p-2 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 1`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 2`] = `
<button
  aria-disabled="true"
  class="bg-blue/50 text-white title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 3`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 4`] = `
<button
  class="bg-orange text-white hover:bg-orange-dark focus:ring-4 ring-orange title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 5`] = `
<button
  class="bg-red text-black hover:text-white hover:bg-red-light focus:ring-4 ring-red title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 6`] = `
<button
  class="bg-green text-white hover:bg-green-dark focus:ring-4 ring-green title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 7`] = `
<button
  class="bg-purple text-white hover:text-white hover:bg-purple-dark focus:ring-4 ring-purple title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 8`] = `
<button
  aria-disabled="true"
  class="bg-blue/50 text-white title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 9`] = `
<button
  aria-disabled="true"
  class="bg-orange/50 text-white title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 10`] = `
<button
  aria-disabled="true"
  class="bg-red/50 text-white title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 11`] = `
<button
  aria-disabled="true"
  class="bg-green/50 text-white title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 12`] = `
<button
  aria-disabled="true"
  class="bg-purple/50 text-white title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 13`] = `
<button
  class="bg-blue text-white font-normal hover:bg-blue-dark focus:ring-4 ring-blue title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 14`] = `
<button
  class="bg-orange text-white hover:bg-orange-dark focus:ring-4 ring-orange title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 15`] = `
<button
  class="bg-red text-black hover:text-white hover:bg-red-light focus:ring-4 ring-red title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 16`] = `
<button
  class="bg-green text-white hover:bg-green-dark focus:ring-4 ring-green title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 17`] = `
<button
  class="bg-purple text-white hover:text-white hover:bg-purple-dark focus:ring-4 ring-purple title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 18`] = `
<button
  aria-disabled="true"
  class="bg-white text-blue/50 border border-blue/50 title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 19`] = `
<button
  aria-disabled="true"
  class="bg-white text-orange/50 border border-orange/50 title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 20`] = `
<button
  aria-disabled="true"
  class="bg-white text-red/50 border border-red/50 title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 21`] = `
<button
  aria-disabled="true"
  class="bg-white text-green/50 border border-green/50 title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;

exports[`BButton.vue renders with the appropriate classses based on the "disabled" prop 22`] = `
<button
  aria-disabled="true"
  class="bg-white text-purple/50 border border-purple/50 title-3 p-3 uppercase rounded cursor-pointer disabled:cursor-not-allowed"
  disabled="disabled"
  type="button"
/>
`;
